--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <title>Paumanok</title>
     <link rel="stylesheet" href="https://unpkg.com/photoswipe/dist/photoswipe.css">
     <link rel="stylesheet" href="https://unpkg.com/photoswipe/dist/default-skin/default-skin.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
+        }
+
+        h1 {
+            font-family: 'Lobster', cursive;
+            font-size: 3rem;
         }
 
         .gallery {
