--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <style>
         body {
+            background: linear-gradient(to bottom, lightblue, aliceblue);
             font-family: Arial, sans-serif;
         }
 
