Fix bug where blue bar appears at bottom of screen on desktop.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         body {
             background: linear-gradient(to bottom, lightblue, aliceblue);
             font-family: Arial, sans-serif;
+            /* Set the body to always cover the full viewport height (100vh),
+               so the background fills the screen even if the content is shorter. */
+            min-height: 100vh;
         }
 
         h1 {
