Add rounded corners and a subtle shadow  effect to the card images.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
             height: 225px;
             object-fit: cover;
             cursor: pointer;
+            /* Rounded corners. */
+            border-radius: 10px;
+            /* Subtle shadow effect. */
+            box-shadow: 0 2px 5px darkgray;
+        }
+
+        .pswp__img {
+            /* Same rounded corners as the gallery view. */
+            border-radius: 10px;
         }
     </style>
 </head>
